# web-cloner

./: .gitignore  BUGFIX.md  CHANGELOG.md  CLAUDE.md  INSTALL.md  LICENSE  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  README_OPTIMIZATION.md  check_status.py  config.py  install.py  main.py  pyproject.toml  requirements.txt  status_cli.py  test_fix.py  test_optimizations.py
examples/: example.py
src/: __init__.py  ai_analyzer.py  detector.py  downloader.py  memory_manager.py  operation_middleware.py  process_cleaner.py  reconstructor.py  thread_manager.py  utils.py
