[project]
name = "website-cloner"
version = "1.0.0"
description = "一比一复刻网站的完整工具,支持技术栈检测、AI辅助分析和项目生成"
authors = [
    {name = "Claude Code"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # Core dependencies
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "lxml>=4.9.0",

    # Tech stack detection
    "builtwith>=1.3.0",

    # Code analysis
    "esprima>=4.0.1",

    # AI integration (optional)
    "openai>=1.0.0",
    "anthropic>=0.18.0",

    # CLI and utilities
    "click>=8.1.0",
    "colorama>=0.4.6",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",

    # HTML parsing and manipulation
    "html5lib>=1.1",
    "cssutils>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
clone-website = "main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
